feat 顶部导航-退出登录

--- a/frontend/src/assets/base.css
+++ b/frontend/src/assets/base.css
@@ -5,6 +5,8 @@
 
 .default-btn {
   background: linear-gradient(135deg,#0ad18e,#03a4a5);
+  border: none;
+  color: #fff;
 }
 
 .default-btn:hover {
